--- a/root21.html
+++ b/root21.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
+    <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./root21.css" />
     <link
       rel="stylesheet"
