--- a/root2.html
+++ b/root2.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
+    <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./root2.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=TT Interphases:ital,wght@0,400;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=TT Interphases:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap"
     />
   </head>
   <body>
